
syntax = "proto3";
import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";
import "reviews.proto";
//import "proto/reviews.proto";

option java_multiple_files = true;
option java_package = "via.sep4.protobuf";
option java_outer_classname = "ItemsProto";

option csharp_namespace = "proto";

package proto;

service ItemService {
  rpc getItem(google.protobuf.Int32Value) returns (Item) {};
  rpc getAllItems(google.protobuf.Empty) returns (stream Item) {};
  rpc addItem(Item) returns (ItemResponse) {};
  rpc updateItem(Item) returns (google.protobuf.Empty) {};
  rpc deleteItem(Item) returns (google.protobuf.Empty) {};
}

message Item {
  int32 id = 1;
  string title = 2;
  string manufacture = 3;
  string description = 4;
  double price = 5;
  int32 stock = 6;
  //todo this is not implemented in the c#
  repeated Review reviews = 7;
}

message ItemResponse{
  string response = 1;
}